--- a/index.html
+++ b/index.html
@@ -1,46 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task Planner</title>
-    <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Task Planner</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <header>
-            <h1>Task Planner</h1>
-                <form id="new-task-form">
-                    <input type="text" id="new-task-input"
-                    placeholder="Enter a task here" />
-
-                    <input type= "submit"
-                    id="new-task-submit"
-                    value="Add task" />
-                </form>
-        </header>
-
-        <main>
-            <section class="task-list">
-            <h2>Tasks</h2>
-
-            <div id="tasks">
-                <div class="task">
-                    <div class="content">
-                        <input type="text" 
-                            class="text"
-                            value="My shiny Task"
-                            readonly
-                        />
-                    </div>
-                    <div class="actions">
-                        <button class="edit">Edit</button>
-                        <button class="delete">Delete</button>
-                </div>
-            </div>
-            </section>
-            <script src="script.js"></script>
-        </main>
+  <header>
+    <h1 id="title-name">Task Planner</h1>
     
+    <h3>Create a task</h3>
+    <form id="new-task-form">
+      <input type="text" id="new-task-input" placeholder="Enter your task here">
+      <button type="submit" id="new-task-submit">Submit</button>
+    </form>
+  </header>
+
+  <main>
+    <section class="task-list">
+      <h2>Tasks-List</h2>
+
+      
+      <ul id="tasks"></ul>
+    </section>
+  </main>
+
+  <script src="script.js"></script>
 </body>
 </html>
